--- a/_notices/2023-03-29_Edge.md
+++ b/_notices/2023-03-29_Edge.md
@@ -13,121 +13,121 @@ Natürlich nicht, denn wir haben es ja schließlich mit Microsoft zu tun. Ich li
 
 ```html
 <ol>
-  <li>Über die drei Punkte "Einstellungen" öffnen.</li>
-  <li>Registerkarte "Profile"
-  <ol type=A>
-    <li>Microsoft Rewards
-    <ul>
-      <li>Verdienen Sie Microsoft Rewards in Microsoft Edge: deaktivieren</li>
-    </ul></li>
-    <li>Kennwörter
-    <ul>
-      <li>Speichern von Kennwörtern anbieten: deaktivieren, wenn man KeePass und Co. verwendet</li>
-    </ul></li>
-    <li>Zahlungsinformationen
-    <ul>
-      <li>Zahlungsinformationen speichern und einfügen: deaktivieren</li>
-    </ul></li>
-	   <li>Browsing-Daten mit anderen Windows-Features gemeinsam nutzen
-	   <ul>
-	     <li>Browsing-Daten mit anderen Windows-Features gemeinsam nutzen: deaktivieren</li>
-    </ul>
-  </ol></li>
-  <li>Registerkarte "Datenschutz, Suche und Dienste"
-  <ol type=A>
-    <li>Tracking-Verhinderung, weitere Informationen: auf "Streng" stellen. Ggf. gestörte Seiten später unter "Ausnahmen" hinzufügen.</li>
-    <li>Browserdaten löschen
-    <ul>
-      <li>Wählen Sie aus, was beim Schließen des Browsers gelöscht werden soll.
-      <ul>
-	       <li>Cookies und andere Websitedaten: aktivieren. Dadurch muss man sich allerdings bei praktisch allen Seiten jeweils neu anmelden.</li>
-        <li>Bei "Webseite zur Liste Nicht löschen hinzufügen" kann man Ausnahmen eintragen, bei denen man angemeldet bleiben möchte.</li>
-        <li>Für mich persönlich: Downloadverlauf: aktivieren.</li>
-        <li>Kennwörter: aktivieren</li>
-        <li>Für mich persönlich: AutoAusfüllen-Formulardaten (einschließlich Formulare und Karten): aktivieren</li>
-      </ul></li>
-	   </ul></li>
-    <li>Datenschutz
-    <ul>
-      <li>„Nicht verfolgen“-Anforderungen: aktivieren</li>
-      <li>"Zulassen, dass Websites überprüfen, ob Sie Zahlungsmethoden gespeichert haben: deaktivieren</li>
-    </ul>
-    <li>Optionale Diagnosedaten: alles deaktivieren</li>
-    <li>Personalisierung & Werbung: ggf. deaktivieren</li>
-    <li>Sicherheit
-    <ul>
-      <li>Website-Tippfehlerschutz: deaktivieren</li>
-      <li>Aktivieren Sie die Sicherheitsdienste der Site, um weitere Informationen zu den von Ihnen besuchten Websites zu erhalten: deaktivieren</li>
-      <li>Verwenden Sie sicheres DNS...: sollte aktiv sein
-      <ul>
-        <li>Hier ggf. eigenen Diensteanbieter angeben.</li>
-      </ul>
-	     <li>Verbessern Sie Ihre Sicherheit im Web: aktivieren, sofern nicht bereits aktiv</li>
-      <ul>
-        <li>Sicherheitsstufe darunter ggf. anpassen</li>
-      </ul>
-    </ul>
-    <li>Dienste: alles ausschalten, braucht kein Mensch</li>
-    <li>Adressleiste und Suche
-    <ul>
-      <li>Such- und Websitevorschläge mit den eingegebenen Zeichen anzeigen: deaktivieren</li>
-      <ul>
-	       <li>Suchmaschinen verwalten
-		      <ol>
-	         <li>Hinzufügen klicken.</li>
-          <li>Im nun geöffneten Dialog folgendes eintragen:<br />Suchmaschine: Startpage<br />Verknüpfung: SP<br />URL mit %s anstelle einer Anfrage: <a href="https://startpage.com/sp/search?q=%s" target="_blank">https://startpage.com/sp/search?q=%s</a></li>
-		        <li>Auf "Speichern" klicken.</li>
-			       <li>Neben dem neuen Eintrag "Startpage" in der Tabelle auf "Weitere Aktionen" klicken und "Als Standard festlegen" wählen.</li>
-        </ol></li>
-      </ul></li>
-    </ul></li>
-  </ol></li>
-  <li>Registerkarte "Randleiste"
-  <ol type=A>
-    <li>Seitenleiste immer anzeigen: deaktiveren</li>
-    <li>Personalisieren meiner Top-Websites in der benutzerdefinierten Seitenleiste: deaktivieren</li>
-    <li>Seite "Copilot"
-    <ul>
-      <li>Copilot anzeigen: deaktivieren</li>
-	   </ul></li>
-    <li>Seite "Suche"
-    <ul>
-      <li><span lang="en">Automatically open Search:</span> deaktivieren</li>
-	   </ul></li>
-    <li>Seite "Spiele"
-    <ul>
-      <li>Lässige Spiele automatisch im Seitenbereich öffnen: deaktivieren</li>
-      <li>Ermöglicht Edge die Freigabe von CASUAL Games-URLs für den Dienstanbieter MSN.: deaktivieren</li>
-	   </ul></li>
-  </ol></li>
-  <li>Registerkarte "Start, Startseite und neue Registerkarten"
-  <ol type=A>
-    <li>Beim Start von Microsoft Edge
-    <ul>
-      <li>"Diese Seiten öffnen:" wählen.</li>
-			   <li>"Neue Seite hinzufügen" klicken.</li>
-			   <li>Folgendes hinzufügen: about:blank</li>
-		  </ul></li>
-    <li>Schaltfläche „Startseite“
-    <ul>
-      <li>Schaltfläche „Startseite“ auf der Symbolleiste anzeigen: benötige ich nicht</li>
-		  </ul></li>
-		  <li>Seite „Neuer Tab“
-    <ul>
-      <li>Wählen: Neue Tab-Seite</li>
-	     <li>URL eingeben: about:blank</li>
-		  </ul></li>
-  </ol></li>
-  <li>Registerkarte "Cookies und Websiteberechtigungen"
-  <ol type=A>
-    <li>Cookies und gespeicherte Daten
-    <ul>
-      <li>Verwalten und Löschen von Cookies und Websitedaten
-      <ul>
-        <li>Cookies von Drittanbietern blockieren: aktivieren</li>  
-      </ul></li>
-    </ul></li>
-  </ol></li>
+<li>Über die drei Punkte "Einstellungen" öffnen.</li>
+<li>Registerkarte "Profile"
+<ol type=A>
+<li>Microsoft Rewards
+<ul>
+<li>Verdienen Sie Microsoft Rewards in Microsoft Edge: deaktivieren</li>
+</ul></li>
+<li>Kennwörter
+<ul>
+<li>Speichern von Kennwörtern anbieten: deaktivieren, wenn man KeePass und Co. verwendet</li>
+</ul></li>
+<li>Zahlungsinformationen
+<ul>
+<li>Zahlungsinformationen speichern und einfügen: deaktivieren</li>
+</ul></li>
+<li>Browsing-Daten mit anderen Windows-Features gemeinsam nutzen
+<ul>
+<li>Browsing-Daten mit anderen Windows-Features gemeinsam nutzen: deaktivieren</li>
+</ul>
+</ol></li>
+<li>Registerkarte "Datenschutz, Suche und Dienste"
+<ol type=A>
+<li>Tracking-Verhinderung, weitere Informationen: auf "Streng" stellen. Ggf. gestörte Seiten später unter "Ausnahmen" hinzufügen.</li>
+<li>Browserdaten löschen
+<ul>
+<li>Wählen Sie aus, was beim Schließen des Browsers gelöscht werden soll.
+<ul>
+<li>Cookies und andere Websitedaten: aktivieren. Dadurch muss man sich allerdings bei praktisch allen Seiten jeweils neu anmelden.</li>
+<li>Bei "Webseite zur Liste Nicht löschen hinzufügen" kann man Ausnahmen eintragen, bei denen man angemeldet bleiben möchte.</li>
+<li>Für mich persönlich: Downloadverlauf: aktivieren.</li>
+<li>Kennwörter: aktivieren</li>
+<li>Für mich persönlich: AutoAusfüllen-Formulardaten (einschließlich Formulare und Karten): aktivieren</li>
+</ul></li>
+</ul></li>
+<li>Datenschutz
+<ul>
+<li>„Nicht verfolgen“-Anforderungen: aktivieren</li>
+<li>"Zulassen, dass Websites überprüfen, ob Sie Zahlungsmethoden gespeichert haben: deaktivieren</li>
+</ul>
+<li>Optionale Diagnosedaten: alles deaktivieren</li>
+<li>Personalisierung & Werbung: ggf. deaktivieren</li>
+<li>Sicherheit
+<ul>
+<li>Website-Tippfehlerschutz: deaktivieren</li>
+<li>Aktivieren Sie die Sicherheitsdienste der Site, um weitere Informationen zu den von Ihnen besuchten Websites zu erhalten: deaktivieren</li>
+<li>Verwenden Sie sicheres DNS...: sollte aktiv sein
+<ul>
+<li>Hier ggf. eigenen Diensteanbieter angeben.</li>
+</ul>
+<li>Verbessern Sie Ihre Sicherheit im Web: aktivieren, sofern nicht bereits aktiv</li>
+<ul>
+<li>Sicherheitsstufe darunter ggf. anpassen</li>
+</ul>
+</ul>
+<li>Dienste: alles ausschalten, braucht kein Mensch</li>
+<li>Adressleiste und Suche
+<ul>
+<li>Such- und Websitevorschläge mit den eingegebenen Zeichen anzeigen: deaktivieren</li>
+<ul>
+<li>Suchmaschinen verwalten
+<ol>
+<li>Hinzufügen klicken.</li>
+<li>Im nun geöffneten Dialog folgendes eintragen:<br />Suchmaschine: Startpage<br />Verknüpfung: SP<br />URL mit %s anstelle einer Anfrage: <a href="https://startpage.com/sp/search?q=%s" target="_blank">https://startpage.com/sp/search?q=%s</a></li>
+<li>Auf "Speichern" klicken.</li>
+<li>Neben dem neuen Eintrag "Startpage" in der Tabelle auf "Weitere Aktionen" klicken und "Als Standard festlegen" wählen.</li>
+</ol></li>
+</ul></li>
+</ul></li>
+</ol></li>
+<li>Registerkarte "Randleiste"
+<ol type=A>
+<li>Seitenleiste immer anzeigen: deaktiveren</li>
+<li>Personalisieren meiner Top-Websites in der benutzerdefinierten Seitenleiste: deaktivieren</li>
+<li>Seite "Copilot"
+<ul>
+<li>Copilot anzeigen: deaktivieren</li>
+</ul></li>
+<li>Seite "Suche"
+<ul>
+<li><span lang="en">Automatically open Search:</span> deaktivieren</li>
+</ul></li>
+<li>Seite "Spiele"
+<ul>
+<li>Lässige Spiele automatisch im Seitenbereich öffnen: deaktivieren</li>
+<li>Ermöglicht Edge die Freigabe von CASUAL Games-URLs für den Dienstanbieter MSN.: deaktivieren</li>
+</ul></li>
+</ol></li>
+<li>Registerkarte "Start, Startseite und neue Registerkarten"
+<ol type=A>
+<li>Beim Start von Microsoft Edge
+<ul>
+<li>"Diese Seiten öffnen:" wählen.</li>
+<li>"Neue Seite hinzufügen" klicken.</li>
+<li>Folgendes hinzufügen: about:blank</li>
+</ul></li>
+<li>Schaltfläche „Startseite“
+<ul>
+<li>Schaltfläche „Startseite“ auf der Symbolleiste anzeigen: benötige ich nicht</li>
+</ul></li>
+<li>Seite „Neuer Tab“
+<ul>
+<li>Wählen: Neue Tab-Seite</li>
+<li>URL eingeben: about:blank</li>
+</ul></li>
+</ol></li>
+<li>Registerkarte "Cookies und Websiteberechtigungen"
+<ol type=A>
+<li>Cookies und gespeicherte Daten
+<ul>
+<li>Verwalten und Löschen von Cookies und Websitedaten
+<ul>
+<li>Cookies von Drittanbietern blockieren: aktivieren</li>  
+</ul></li>
+</ul></li>
+</ol></li>
 </ol>
 ```
 
@@ -135,18 +135,16 @@ Natürlich nicht, denn wir haben es ja schließlich mit Microsoft zu tun. Ich li
 
 ```html
 <ol>
-  <li>Privatsphäre erhöhen und Werbung blocken: <a href="
-https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak?hl=de-DE" target="_blank">uBlock Origin installieren.</a></li>
-  <li>Zentrale Bibliotheken und dadurch Tracking blockieren: <a href="
-  https://microsoftedge.microsoft.com/addons/detail/decentraleyes/lmijmgnfconjockjeepmlmkkibfgjmla" target="_blank">Decentraleyes installieren.</a><br />Die nach der Installation angezeigte Seite kann i.d.R. ignoriert werden.</li>
-  <li>Bei neuen Tabs keine Microsoft-Seiten laden: Custom New Tab URL installieren.
-  <ul>
-    <li><a href="https://microsoftedge.microsoft.com/addons/detail/custom-new-tab-url/oeibmbobgpgnbnlbaffdgebpeepfbnhi" target="_blank">Add-on installieren.</a></li>
-	   <li>Weil Edge so ein schlauer Fuchs ist, wird das Add-on direkt nach der Installation sicherheitshalber deinstalliert, worüber Bill Gates Erben uns auch pflichtschuldig informieren. Warum sollten wir es auch haben wollen, wenn wir es installieren...</li>
-	   <li><a href="edge://extensions/" target="_blank">"Erweiterungen verwalten" aufrufen.</a></li>
-	   <li>Custom New Tab URL aktivieren: anhaken</li>
-	   <li>Freuen und schließen.</li>
-	 </ul></li>
+<li>Privatsphäre erhöhen und Werbung blocken: <a href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak?hl=de-DE" target="_blank">uBlock Origin installieren.</a></li>
+<li>Zentrale Bibliotheken und dadurch Tracking blockieren: <a href="https://microsoftedge.microsoft.com/addons/detail/decentraleyes/lmijmgnfconjockjeepmlmkkibfgjmla" target="_blank">Decentraleyes installieren.</a><br />Die nach der Installation angezeigte Seite kann i.d.R. ignoriert werden.</li>
+<li>Bei neuen Tabs keine Microsoft-Seiten laden: Custom New Tab URL installieren.
+<ul>
+<li><a href="https://microsoftedge.microsoft.com/addons/detail/custom-new-tab-url/oeibmbobgpgnbnlbaffdgebpeepfbnhi" target="_blank">Add-on installieren.</a></li>
+<li>Weil Edge so ein schlauer Fuchs ist, wird das Add-on direkt nach der Installation sicherheitshalber deinstalliert, worüber Bill Gates Erben uns auch pflichtschuldig informieren. Warum sollten wir es auch haben wollen, wenn wir es installieren...</li>
+<li><a href="edge://extensions/" target="_blank">"Erweiterungen verwalten" aufrufen.</a></li>
+<li>Custom New Tab URL aktivieren: anhaken</li>
+<li>Freuen und schließen.</li>
+</ul></li>
 </ol>
 ```
 
